Updated posts.js controller
