# core/server/api/swagger/swagger.yaml
@@ -13,7 +13,6 @@ consumes:
   - application/json
 produces:
   - application/json
-  - text/html
 paths:
   /posts:
     x-swagger-router-controller: posts
@@ -135,6 +134,10 @@ paths:
             $ref: '#/definitions/SuccessResponse'
         '404':
           description: Not Found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '500':
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/ErrorResponse'
 definitions:
